# pyProjectFactory

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md.template  Dockerfile.data  Dockerfile.dev  README.md  ROADMAP.md  copier.yml  docker-compose.yml  justfile  noxfile.py  pyproject.toml  run.py  setup_project.py
.github/: dependabot.yml
.github/workflows/: ci.yml  ci.yml.template  claude.yml  release.yml  setup-repository-protection.yml
docs/: GITHUB_LABELS.md  GITHUB_PROJECT_SETUP.md  REPOSITORY_SETUP.md
notebooks/: 01_data_exploration.ipynb  02_spark_example.ipynb
scripts/: setup_spark.py
src/new_project_template/: __init__.py  data_utils.py  spark_utils.py
src/{{PROJECT_NAME}}/: __init__.py
tests/: test_new_project_template.py  test_{{PROJECT_NAME}}.py
